welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: too many arguments for method parcoursDiag: (diag: Int)Int
    cpt = parcoursDiag(i,cpt)
                      ^